Remove superfluous '../text/' from internal links, as epubcheck no longer outputs errors without them

--- a/src/epub/text/a-royal-poet.xhtml
+++ b/src/epub/text/a-royal-poet.xhtml
@@ -37,8 +37,8 @@
 			</blockquote>
 			<p>In this mood of mere poetical susceptibility, I visited the ancient keep of the castle, where James the First of <span epub:type="z3998:place">Scotland</span>, the pride and theme of <span epub:type="z3998:nationality">Scottish</span> poets and historians, was for many years of his youth detained a prisoner of state. It is a large gray tower, that has stood the brunt of ages, and is still in good preservation. It stands on a mound which elevates it above the other parts of the castle, and a great flight of steps leads to the interior. In the armory, a Gothic hall furnished with weapons of various kinds and ages, I was shown a coat of armor hanging against the wall, which had once belonged to James. Hence I was conducted up a staircase to a suite of apartments, of faded magnificence, hung with storied tapestry, which formed his prison, and the scene of that passionate and fanciful amour, which has woven into the web of his story the magical hues of poetry and fiction.</p>
 			<p>The whole history of this amiable but unfortunate prince is highly romantic. At the tender age of eleven, he was sent from home by his father, Robert <span epub:type="z3998:roman">III</span>, and destined for the <span epub:type="z3998:nationality">French</span> court, to be reared under the eye of the <span epub:type="z3998:nationality">French</span> monarch, secure from the treachery and danger that surrounded the royal house of <span epub:type="z3998:place">Scotland</span>. It was his mishap, in the course of his voyage, to fall into the hands of the <span epub:type="z3998:nationality">English</span>, and he was detained prisoner by Henry <span epub:type="z3998:roman">IV</span>, notwithstanding that a truce existed between the two countries.</p>
-			<p>The intelligence of his capture, coming in the train of many sorrows and disasters, proved fatal to his unhappy father. “The news,” we are told, “was brought to him while at supper, and did so overwhelm him with grief that he was almost ready to give up the ghost into the hands of the servants that attended him. But being carried to his bedchamber, he abstained from all food, and in three days died of hunger and grief at <span epub:type="z3998:place">Rothesay</span>.”<a href="../text/endnotes.xhtml#note-4" id="noteref-4" epub:type="noteref">4</a></p>
-			<p>James was detained in captivity above eighteen years; but, though deprived of personal liberty, he was treated with the respect due to his rank. Care was taken to instruct him in all the branches of useful knowledge cultivated at that period, and to give him those mental and personal accomplishments deemed proper for a prince. Perhaps in this respect his imprisonment was an advantage, as it enabled him to apply himself the more exclusively to his improvement, and quietly to imbibe that rich fund of knowledge and to cherish those elegant tastes which have given such a lustre to his memory. The picture drawn of him in early life by the <span epub:type="z3998:nationality">Scottish</span> historians is highly captivating, and seems rather the description of a hero of romance than of a character in real history. He was well learnt, we are told, “to fight with the sword, to joust, to tourney, to wrestle, to sing and dance; he was an expert mediciner, right crafty in playing both of lute and harp, and sundry other instruments of music, and was expert in grammar, oratory, and poetry.”<a href="../text/endnotes.xhtml#note-5" id="noteref-5" epub:type="noteref">5</a></p>
+			<p>The intelligence of his capture, coming in the train of many sorrows and disasters, proved fatal to his unhappy father. “The news,” we are told, “was brought to him while at supper, and did so overwhelm him with grief that he was almost ready to give up the ghost into the hands of the servants that attended him. But being carried to his bedchamber, he abstained from all food, and in three days died of hunger and grief at <span epub:type="z3998:place">Rothesay</span>.”<a href="endnotes.xhtml#note-4" id="noteref-4" epub:type="noteref">4</a></p>
+			<p>James was detained in captivity above eighteen years; but, though deprived of personal liberty, he was treated with the respect due to his rank. Care was taken to instruct him in all the branches of useful knowledge cultivated at that period, and to give him those mental and personal accomplishments deemed proper for a prince. Perhaps in this respect his imprisonment was an advantage, as it enabled him to apply himself the more exclusively to his improvement, and quietly to imbibe that rich fund of knowledge and to cherish those elegant tastes which have given such a lustre to his memory. The picture drawn of him in early life by the <span epub:type="z3998:nationality">Scottish</span> historians is highly captivating, and seems rather the description of a hero of romance than of a character in real history. He was well learnt, we are told, “to fight with the sword, to joust, to tourney, to wrestle, to sing and dance; he was an expert mediciner, right crafty in playing both of lute and harp, and sundry other instruments of music, and was expert in grammar, oratory, and poetry.”<a href="endnotes.xhtml#note-5" id="noteref-5" epub:type="noteref">5</a></p>
 			<p>With this combination of manly and delicate accomplishments, fitting him to shine both in active and elegant life, and calculated to give him an intense relish for joyous existence, it must have been a severe trial, in an age of bustle and chivalry, to pass the springtime of his years in monotonous captivity. It was the good fortune of James, however, to be gifted with a powerful poetic fancy, and to be visited in his prison by the choicest inspirations of the muse. Some minds corrode, and grow inactive, under the loss of personal liberty; others grow morbid and irritable; but it is the nature of the poet to become tender and imaginative in the loneliness of confinement. He banquets upon the honey of his own thoughts, and, like the captive bird, pours forth his soul in melody.</p>
 			<blockquote epub:type="z3998:poem">
 				<p>
@@ -52,7 +52,7 @@
 					<br/>
 					<span>Even there her charming melody doth prove</span>
 					<br/>
-					<span>That all her boughs are trees, her cage a grove.<a href="../text/endnotes.xhtml#note-6" id="noteref-6" epub:type="noteref">6</a></span>
+					<span>That all her boughs are trees, her cage a grove.<a href="endnotes.xhtml#note-6" id="noteref-6" epub:type="noteref">6</a></span>
 				</p>
 			</blockquote>
 			<p>Indeed, it is the divine attribute of the imagination, that it is irrepressible, unconfinable⁠—that when the real world is shut out, it can create a world for itself, and, with a necromantic power, can conjure up glorious shapes and forms and brilliant visions, to make solitude populous, and irradiate the gloom of the dungeon. Such was the world of pomp and pageant that lived round Tasso in his dismal cell at <span epub:type="z3998:place">Ferrara</span>, when he conceived the splendid scenes of his <span epub:type="z3998:place">Jerusalem</span>; and we may consider the “King’s Quair,” composed by James during his captivity at <span epub:type="z3998:place">Windsor</span>, as another of those beautiful breakings forth of the soul from the restraint and gloom of the prison-house.</p>
@@ -74,7 +74,7 @@
 					<br/>
 					<span>Was all the place and hawthorn hedges knet,</span>
 					<br/>
-					<span class="i1">That lyf<a href="../text/endnotes.xhtml#note-7" id="noteref-7" epub:type="noteref">7</a> was none, walkyng there forbye,</span>
+					<span class="i1">That lyf<a href="endnotes.xhtml#note-7" id="noteref-7" epub:type="noteref">7</a> was none, walkyng there forbye,</span>
 					<br/>
 					<span class="i1">That might within scarce any wight espye.</span>
 				</p>
@@ -94,7 +94,7 @@
 					<span class="i1">The boughs did spread the arbour all about.</span>
 				</p>
 				<p>
-					<span>And on the small grene twistis<a href="../text/endnotes.xhtml#note-8" id="noteref-8" epub:type="noteref">8</a> set</span>
+					<span>And on the small grene twistis<a href="endnotes.xhtml#note-8" id="noteref-8" epub:type="noteref">8</a> set</span>
 					<br/>
 					<span class="i1">The lytel swete nightingales, and sung</span>
 					<br/>
@@ -104,7 +104,7 @@
 					<br/>
 					<span>That all the garden and the wallis rung</span>
 					<br/>
-					<span>Right of their song⁠—<a href="../text/endnotes.xhtml#note-9" id="noteref-9" epub:type="noteref">9</a></span>
+					<span>Right of their song⁠—<a href="endnotes.xhtml#note-9" id="noteref-9" epub:type="noteref">9</a></span>
 				</p>
 			</blockquote>
 			<p>It was the month of May, when everything was in bloom, and he interprets the song of the nightingale into the language of his enamoured feeling:</p>
@@ -130,7 +130,7 @@
 					<br/>
 					<span class="i1">Is it of him, as we in books do find:</span>
 					<br/>
-					<span class="i1">May he oure hertes setten<a href="../text/endnotes.xhtml#note-10" id="noteref-10" epub:type="noteref">10</a> and unbynd:</span>
+					<span class="i1">May he oure hertes setten<a href="endnotes.xhtml#note-10" id="noteref-10" epub:type="noteref">10</a> and unbynd:</span>
 					<br/>
 					<span>Hath he upon oure hertes such maistrye?</span>
 					<br/>
@@ -141,13 +141,13 @@
 					<br/>
 					<span class="i1">That he of every wight hath care and charge,</span>
 					<br/>
-					<span>What have I gilt<a href="../text/endnotes.xhtml#note-11" id="noteref-11" epub:type="noteref">11</a> to him, or done offense,</span>
+					<span>What have I gilt<a href="endnotes.xhtml#note-11" id="noteref-11" epub:type="noteref">11</a> to him, or done offense,</span>
 					<br/>
 					<span class="i1">That I am thral’d, and birdis go at large?</span>
 				</p>
 			</blockquote>
 			<p>In the midst of his musing, as he casts his eye downward, he beholds “the fairest and the freshest young floure” that ever he had seen. It is the lovely Lady Jane, walking in the garden to enjoy the beauty of that “fresh May morrowe.” Breaking thus suddenly upon his sight in a moment of loneliness and excited susceptibility, she at once captivates the fancy of the romantic prince, and becomes the object of his wandering wishes, the sovereign of his ideal world.</p>
-			<p>There is, in this charming scene, an evident resemblance to the early part of Chaucer’s “Knight’s Tale,” where Palamon and Arcite fall in love with Emilia, whom they see walking in the garden of their prison. Perhaps the similarity of the actual fact to the incident which he had read in Chaucer may have induced James to dwell on it in his poem. His description of the Lady Jane is given in the picturesque and minute manner of his master, and, being doubtless taken from the life, is a perfect portrait of a beauty of that day. He dwells with the fondness of a lover on every article of her apparel, from the net of pearl, splendent with emeralds and sapphires, that confined her golden hair, even to the “goodly chaine of small orfeverye”<a href="../text/endnotes.xhtml#note-12" id="noteref-12" epub:type="noteref">12</a> about her neck, whereby there hung a ruby in shape of a heart, that seemed, he says, like a spark of fire burning upon her white bosom. Her dress of white tissue was looped up to enable her to walk with more freedom. She was accompanied by two female attendants, and about her sported a little hound decorated with bells, probably the small <span epub:type="z3998:nationality">Italian</span> hound of exquisite symmetry which was a parlor favorite and pet among the fashionable dames of ancient times. James closes his description by a burst of general eulogium:</p>
+			<p>There is, in this charming scene, an evident resemblance to the early part of Chaucer’s “Knight’s Tale,” where Palamon and Arcite fall in love with Emilia, whom they see walking in the garden of their prison. Perhaps the similarity of the actual fact to the incident which he had read in Chaucer may have induced James to dwell on it in his poem. His description of the Lady Jane is given in the picturesque and minute manner of his master, and, being doubtless taken from the life, is a perfect portrait of a beauty of that day. He dwells with the fondness of a lover on every article of her apparel, from the net of pearl, splendent with emeralds and sapphires, that confined her golden hair, even to the “goodly chaine of small orfeverye”<a href="endnotes.xhtml#note-12" id="noteref-12" epub:type="noteref">12</a> about her neck, whereby there hung a ruby in shape of a heart, that seemed, he says, like a spark of fire burning upon her white bosom. Her dress of white tissue was looped up to enable her to walk with more freedom. She was accompanied by two female attendants, and about her sported a little hound decorated with bells, probably the small <span epub:type="z3998:nationality">Italian</span> hound of exquisite symmetry which was a parlor favorite and pet among the fashionable dames of ancient times. James closes his description by a burst of general eulogium:</p>
 			<blockquote epub:type="z3998:poem">
 				<p>
 					<span>In her was youth, beauty, with humble port,</span>
@@ -156,7 +156,7 @@
 					<br/>
 					<span>God better knows than my pen can report,</span>
 					<br/>
-					<span class="i1">Wisdom, largesse,<a href="../text/endnotes.xhtml#note-13" id="noteref-13" epub:type="noteref">13</a> estate,<a href="../text/endnotes.xhtml#note-14" id="noteref-14" epub:type="noteref">14</a> and cunning<a href="../text/endnotes.xhtml#note-15" id="noteref-15" epub:type="noteref">15</a> sure,</span>
+					<span class="i1">Wisdom, largesse,<a href="endnotes.xhtml#note-13" id="noteref-13" epub:type="noteref">13</a> estate,<a href="endnotes.xhtml#note-14" id="noteref-14" epub:type="noteref">14</a> and cunning<a href="endnotes.xhtml#note-15" id="noteref-15" epub:type="noteref">15</a> sure,</span>
 					<br/>
 					<span>In every point so guided her measure,</span>
 					<br/>
