--- a/src/epub/text/lenvoy.xhtml
+++ b/src/epub/text/lenvoy.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="lenvoy" epub:type="volume se:short-story">
 			<header>
-				<h2 epub:type="title">L’Envoy<a href="../text/endnotes.xhtml#note-60" id="noteref-60" epub:type="noteref">60</a></h2>
+				<h2 epub:type="title">L’Envoy<a href="endnotes.xhtml#note-60" id="noteref-60" epub:type="noteref">60</a></h2>
 				<blockquote epub:type="epigraph z3998:poem">
 					<p>
 						<span>Go, little booke, God send thee good passage,</span>
