--- a/src/epub/text/rural-life-in-england.xhtml
+++ b/src/epub/text/rural-life-in-england.xhtml
@@ -68,7 +68,7 @@
 					<br/>
 					<span>Heaven; That, like a flower deep hid in rock cleft,</span>
 					<br/>
-					<span>Smiles, though ’tis looking only at the sky.<a href="../text/endnotes.xhtml#note-3" id="noteref-3" epub:type="noteref">3</a></span>
+					<span>Smiles, though ’tis looking only at the sky.<a href="endnotes.xhtml#note-3" id="noteref-3" epub:type="noteref">3</a></span>
 				</p>
 			</blockquote>
 		</section>
