Remove some spans from titles

--- a/src/epub/text/rural-life-in-england.xhtml
+++ b/src/epub/text/rural-life-in-england.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="rural-life-in-england" epub:type="volume se:short-story">
 			<header>
-				<h2 epub:type="title">Rural Life in <span epub:type="z3998:place">England</span></h2>
+				<h2 epub:type="title">Rural Life in England</h2>
 				<blockquote epub:type="epigraph z3998:poem">
 					<p>
 						<span>Oh! friendly to the best pursuits of man,</span>
