--- a/src/epub/text/the-christmas-dinner.xhtml
+++ b/src/epub/text/the-christmas-dinner.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="the-christmas-dinner" epub:type="volume se:short-story">
 			<header>
-				<h2 epub:type="title">The <span epub:type="z3998:event">Christmas</span> Dinner</h2>
+				<h2 epub:type="title">The Christmas Dinner</h2>
 				<blockquote epub:type="epigraph z3998:poem">
 					<p>
 						<span>Lo, now is come our joyful’st feast!</span>
