--- a/src/epub/text/the-legend-of-sleepy-hollow.xhtml
+++ b/src/epub/text/the-legend-of-sleepy-hollow.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="the-legend-of-sleepy-hollow" epub:type="volume se:short-story">
 			<header>
-				<h2 epub:type="title">The Legend of <span epub:type="z3998:place">Sleepy Hollow</span></h2>
+				<h2 epub:type="title">The Legend of Sleepy Hollow</h2>
 				<p epub:type="bridgehead">Found among the papers of the late Diedrich Knickerbocker.</p>
 				<blockquote epub:type="epigraph z3998:poem">
 					<p>
