--- a/src/epub/text/traits-of-indian-character.xhtml
+++ b/src/epub/text/traits-of-indian-character.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="traits-of-indian-character" epub:type="volume se:short-story">
 			<header>
-				<h2 epub:type="title z3998:place">Traits of <span epub:type="z3998:nationality">Indian</span> Character</h2>
+				<h2 epub:type="title z3998:place">Traits of Indian Character</h2>
 				<blockquote epub:type="epigraph">
 					<p>“I appeal to any white man if ever he entered Logan’s cabin hungry, and he gave him not to eat; if ever he came cold and naked, and he clothed him not.”</p>
 					<cite>Speech of an <span epub:type="z3998:nationality">Indian</span> Chief</cite>
