--- a/src/epub/text/christmas-day.xhtml
+++ b/src/epub/text/christmas-day.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="christmas-day" epub:type="volume se:short-story">
 			<header>
-				<h2 epub:type="title"><span epub:type="z3998:event">Christmas</span> Day</h2>
+				<h2 epub:type="title">Christmas Day</h2>
 				<blockquote epub:type="epigraph z3998:poem">
 					<p>
 						<span>Dark and dull night, flie hence away,</span>
