--- a/src/epub/text/london-antiques.xhtml
+++ b/src/epub/text/london-antiques.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="london-antiques" epub:type="volume se:short-story">
 			<header>
-				<h2 epub:type="title"><span epub:type="z3998:place">London</span> Antiques</h2>
+				<h2 epub:type="title">London Antiques</h2>
 				<blockquote epub:type="epigraph z3998:poem">
 					<p>
 						<span class="i7">—I do walk</span>
