--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -150,13 +150,13 @@
 					<a href="text/epigraph.xhtml" epub:type="frontmatter epigraph">Epigraph</a>
 				</li>
 				<li>
-					<a href="text/preface.xhtml" epub:type="frontmatter z3998:fiction preface">Preface to the Revised Edition</a>
+					<a href="text/preface.xhtml" epub:type="frontmatter preface">Preface to the Revised Edition</a>
 				</li>
 				<li>
 					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
 				</li>
 				<li>
-					<a href="text/the-authors-account-of-himself.xhtml" epub:type="bodymatter z3998:fiction">The Sketch-Book of Goeffrey Crayon, Gent.</a>
+					<a href="text/the-authors-account-of-himself.xhtml" epub:type="bodymatter z3998:fiction">The Sketch-Book of Geoffrey Crayon, Gent.</a>
 				</li>
 				<li>
 					<a href="text/endnotes.xhtml" epub:type="backmatter rearnotes">Endnotes</a>
