--- a/src/epub/text/rip-van-winkle.xhtml
+++ b/src/epub/text/rip-van-winkle.xhtml
@@ -92,7 +92,7 @@
 			<p>Rip now resumed his old walks and habits; he soon found many of his former cronies, though all rather the worse for the wear and tear of time; and preferred making friends among the rising generation, with whom he soon grew into great favor.</p>
 			<p>Having nothing to do at home, and being arrived at that happy age when a man can be idle with impunity, he took his place once more on the bench, at the inn door, and was reverenced as one of the patriarchs of the village, and a chronicle of the old times “before the war.” It was some time before he could get into the regular track of gossip, or could be made to comprehend the strange events that had taken place during his torpor. How that there had been a revolutionary war⁠—that the country had thrown off the yoke of old <span epub:type="z3998:place">England</span>⁠—and that, instead of being a subject to his Majesty George the Third, he was now a free citizen of the <span epub:type="z3998:place">United States</span>. Rip, in fact, was no politician; the changes of states and empires made but little impression on him; but there was one species of despotism under which he had long groaned, and that was⁠—petticoat government. Happily, that was at an end; he had got his neck out of the yoke of matrimony, and could go in and out whenever he pleased, without dreading the tyranny of Dame Van Winkle. Whenever her name was mentioned, however, he shook his head, shrugged his shoulders, and cast up his eyes; which might pass either for an expression of resignation to his fate, or joy at his deliverance.</p>
 			<p>He used to tell his story to every stranger that arrived at <abbr>Mr.</abbr> Doolittle’s hotel. He was observed, at first, to vary on some points every time he told it, which was, doubtless, owing to his having so recently awaked. It at last settled down precisely to the tale I have related, and not a man, woman, or child in the neighborhood, but knew it by heart. Some always pretended to doubt the reality of it, and insisted that Rip had been out of his head, and that this was one point on which he always remained flighty. The old <span epub:type="z3998:nationality">Dutch</span> inhabitants, however, almost universally gave it full credit. Even to this day, they never hear a thunderstorm of a summer afternoon about the Catskill, but they say Hendrick Hudson and his crew are at their game of ninepins; and it is a common wish of all henpecked husbands in the neighborhood, when life hangs heavy on their hands, that they might have a quieting draught out of Rip Van Winkle’s flagon.</p>
-			<section epub:type="subchapter">
+			<section id="note" epub:type="subchapter">
 				<header>
 					<p>Note.</p>
 				</header>
@@ -102,7 +102,7 @@
 					<p class="signature"><abbr class="name">D. K.</abbr>”</p>
 				</footer>
 			</section>
-			<section epub:type="subchapter z3998:postscript">
+			<section id="rip-van-winkle-postscript" epub:type="subchapter z3998:postscript">
 				<header>
 					<p>Postscript.</p>
 				</header>
