Update for epub 3.2 compatibility

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -159,7 +159,7 @@
 					<a href="text/the-authors-account-of-himself.xhtml" epub:type="bodymatter z3998:fiction">The Sketch-Book of Geoffrey Crayon, Gent.</a>
 				</li>
 				<li>
-					<a href="text/endnotes.xhtml" epub:type="backmatter rearnotes">Endnotes</a>
+					<a href="text/endnotes.xhtml" epub:type="backmatter endnotes">Endnotes</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
